update spring boot to 3.4.1; migrate javax.servlet to jakarta.servlet; migrate javax.annotation to jakarta.annotation; regenerate nacos_service proto grpc code（for removing javax.annotation dependency)